// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AnswerOption render snapshot: renders correct option with feedback 1`] = `
<Advanced
  className="answer-option d-flex flex-row justify-content-between flex-nowrap pb-2 pt-2"
  onToggle={[Function]}
  open={false}
>
  <div
    className="answer-option-flex-item-1 mr-1 d-flex align-items-center"
  >
    <Checker
      answer={
        Object {
          "correct": true,
          "id": "A",
          "selectedFeedback": "some feedback",
          "title": "Answer 1",
        }
      }
      hasSingleAnswer={false}
      setAnswer={[Function]}
    />
  </div>
  <div
    className="answer-option-flex-item-2 ml-1"
  >
    <Form.Control
      as="textarea"
      autoResize={true}
      className="answer-option-textarea text-gray-500 small"
      onChange={[Function]}
      placeholder="Enter an answer"
      rows={1}
      value="Answer 1"
    />
    <Body>
      <injectIntl(ShimmedIntlComponent)
        answer={
          Object {
            "correct": true,
            "id": "A",
            "selectedFeedback": "some feedback",
            "title": "Answer 1",
          }
        }
        intl={
          Object {
            "formatMessage": [Function],
          }
        }
        problemType="multiplechoiceresponse"
        setAnswer={[Function]}
      />
    </Body>
  </div>
  <div
    className="answer-option-flex-item-3 d-flex flex-row flex-nowrap"
  >
    <Trigger>
      <IconButton
        alt="Toggle feedback"
        className="feedback-icon-button"
        iconAs="Icon"
        variant="primary"
      />
    </Trigger>
    <IconButton
      alt="Delete answer"
      iconAs="Icon"
      onClick={[Function]}
      variant="primary"
    />
  </div>
</Advanced>
`;

exports[`AnswerOption render snapshot: renders correct option with selected unselected feedback 1`] = `
<Advanced
  className="answer-option d-flex flex-row justify-content-between flex-nowrap pb-2 pt-2"
  onToggle={[Function]}
  open={false}
>
  <div
    className="answer-option-flex-item-1 mr-1 d-flex align-items-center"
  >
    <Checker
      answer={
        Object {
          "correct": true,
          "id": "A",
          "selectedFeedback": "selected feedback",
          "title": "Answer 1",
          "unselectedFeedback": "unselected feedback",
        }
      }
      hasSingleAnswer={false}
      setAnswer={[Function]}
    />
  </div>
  <div
    className="answer-option-flex-item-2 ml-1"
  >
    <Form.Control
      as="textarea"
      autoResize={true}
      className="answer-option-textarea text-gray-500 small"
      onChange={[Function]}
      placeholder="Enter an answer"
      rows={1}
      value="Answer 1"
    />
    <Body>
      <injectIntl(ShimmedIntlComponent)
        answer={
          Object {
            "correct": true,
            "id": "A",
            "selectedFeedback": "selected feedback",
            "title": "Answer 1",
            "unselectedFeedback": "unselected feedback",
          }
        }
        intl={
          Object {
            "formatMessage": [Function],
          }
        }
        problemType="choiceresponse"
        setAnswer={[Function]}
      />
    </Body>
  </div>
  <div
    className="answer-option-flex-item-3 d-flex flex-row flex-nowrap"
  >
    <Trigger>
      <IconButton
        alt="Toggle feedback"
        className="feedback-icon-button"
        iconAs="Icon"
        variant="primary"
      />
    </Trigger>
    <IconButton
      alt="Delete answer"
      iconAs="Icon"
      onClick={[Function]}
      variant="primary"
    />
  </div>
</Advanced>
`;
